--- a/pages/despre.html
+++ b/pages/despre.html
@@ -176,7 +176,7 @@
                         cultural și științific...</p>
 
                     <hr>
-                    <a target="_blank" class="a" href="">
+                    <a target="_blank" class="a" href="https://zaharia191.github.io/Biblioteca-Enichioi/">
                         <p class="info-p">Află mai mult...</p>
 
                     </a>
@@ -232,7 +232,7 @@
                 </div>
                 <div class="contacte-pmtolica">
                     <h3 class="centered">Punctul medical Țolica</h3>
-                    <p><img class="icon1" src="/images/icons.map.png">Adresa:Raionul Cantemir,satul Țolica</p>
+                    <p><img class="icon1" src="../images/icons.map.png">Adresa:Raionul Cantemir,satul Țolica</p>
                     <p><img class="icon1" src="../images/icons.mobile.png"><a target="_blank"  class="a" href="tel:062112553">Telefon:
                             062112553</a></p>
                     <p><img class="icon1" src="../images/icons.gmail.png"><a target="_blank"  class="a"
